mail and phone number added

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -420,4 +420,8 @@ h6,
 }
 #social-buttons4-1 .mbr-section-title {
   text-align: center;
+  font-size: 32px;
+}
+#contacts1-8 P {
+  text-align: left;
 }
